#330 Mockito benötigt EnableDynamicAgentLoading